--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#reseñas">Reseñas</a></li>
             </ul>
             <ul class="navegacion menu-derecho">
-                <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                <li><a href="#" class="btn_search"><i class="fa-solid fa-magnifying-glass"></i></a></li>
                 <li><a href="./templates/registro.html" class="btn_registro">Registrarse</a></li>
             </ul>
         </nav>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="comentario">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, perspiciatis, non facere distinctio minus deleniti nisi officia impedit corrupti labore deserunt maiores libero recusandae tenetur! Quia quaerat quasi iste repellendus.</p>
+                    <p>"Netflix ha logrado lo que pocos pueden: traer la magia de la narrativa a la pantalla con una calidad y diversidad impresionantes. Es un universo de entretenimiento donde los límites de la imaginación se desdibujan y los espectadores son transportados a mundos inexplorados".</p>
                 </div>
             </div>
             <div class="testimonio">
@@ -184,7 +184,7 @@
                     </div>
                 </div>
                 <div class="comentario">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, perspiciatis, non facere distinctio minus deleniti nisi officia impedit corrupti labore deserunt maiores libero recusandae tenetur! Quia quaerat quasi iste repellendus.</p>
+                    <p>"Netflix, con su amplia gama de historias cautivadoras y sus innovadoras técnicas cinematográficas, ha continuado el legado del suspenso y la intriga que tanto me apasionaban. Es un placer ver cómo Netflix lleva adelante el arte de la narrativa visual en el mundo moderno del entretenimiento".</p>
                 </div>
             </div>
             <div class="testimonio">
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <div class="comentario">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, perspiciatis, non facere distinctio minus deleniti nisi officia impedit corrupti labore deserunt maiores libero recusandae tenetur! Quia quaerat quasi iste repellendus.</p>
+                    <p>"Con su enfoque en la narrativa arriesgada y visualmente impactante, Netflix sigue siendo un destino imprescindible para aquellos que buscan nuevas y emocionantes experiencias cinematográficas".</p>
                 </div>
             </div>
             <div class="testimonio">
@@ -230,7 +230,7 @@
                     </div>
                 </div>
                 <div class="comentario">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, perspiciatis, non facere distinctio minus deleniti nisi officia impedit corrupti labore deserunt maiores libero recusandae tenetur! Quia quaerat quasi iste repellendus.</p>
+                    <p>"Su compromiso con la innovación ha llevado a la creación de historias que resuenan en el corazón de millones de espectadores. Es un honor ver cómo continúan expandiendo los límites de lo que es posible en la pantalla"</p>
                 </div>
             </div>
         </div>
