--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
     <link rel="icon" type="image/ico" href="./resources/netflix.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
     </header>
     <section class="inicio" id="inicio">
         <video autoplay loop muted class="background-clip">
-            <source src="./resources/Breaking Bad - Trailer Estena.mp4">
+            <source src="./resources/breaking_bad_trailer.mp4">
         </video>
         <div class="contenido-inicio">
             <img src="./resources/logo_bb.png" alt="logo de Breaking Bad">
@@ -133,8 +133,8 @@
             </div>
         </div>
 
-        <a href="#" class="switchLeft sliderButton"><</a>
-        <a href="#" class="switchRight sliderButton">></a>
+        <a href="#" class="switchLeft sliderButton">&lt;</a>
+        <a href="#" class="switchRight sliderButton">&gt;</a>
     </section>
     <section class="reseñas" id="reseñas">
         <div class="titulo-reseñas">
@@ -237,11 +237,11 @@
     </section>
     <footer class="footer">
         <div class="iconos">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-github"></i>
+            <a href="https://www.facebook.com/NetflixArg/?locale=es_LA" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/netflixlat/?hl=es-la" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://twitter.com/NetflixLAT?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.youtube.com/@NetflixLATAM" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://github.com/JuanCaceres18" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
         <div class="etiquetas-footer">
             <p class="etiquetas">Audio descriptivo</p>
